# helpmefreeit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
freeit-gui/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
freeit-gui/src/main/: index.ts  ipc.ts  scanner-worker.ts  scanner.test.ts  scanner.ts  subprocess.test.ts  subprocess.ts  types.ts
freeit-gui/src/preload/: index.ts
freeit-gui/src/renderer/: App.tsx  index.html
freeit-gui/src/renderer/components/: Breadcrumb.tsx  CleanView.tsx  ContextMenu.tsx  DupesView.tsx  Explorer.tsx  ScanProgress.tsx  SizeBar.tsx  StaleView.tsx  Toolbar.tsx  Treemap.tsx
freeit-gui/src/renderer/hooks/: useClean.ts  useDupes.ts  useScanner.ts  useStale.ts
freeit-gui/src/renderer/lib/: format.ts  types.ts
freeit-gui/src/renderer/styles/: globals.css
helpmefreeit/: __init__.py  __main__.py  cache.py  cli.py  display.py  dupes.py  hashing.py  presets.py  scanner.py  stale.py
helpmefreeit/tests/: test_cache.py  test_dupes.py  test_hashing.py  test_presets.py  test_stale.py
